Fix mobile navigation z-index issue

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -313,6 +313,8 @@
       z-index: 1;
     }
 
+    z-index: 100; // Fix mobile menu z-index
+
     li {
       display: block;
       border-bottom: 1px solid $border-color;
